# bevy_mod_ffi

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yaml
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/guest/: Cargo.toml
crates/guest/src/: entity.rs  lib.rs
crates/guest/src/component/: mod.rs
crates/guest/src/query/: builder.rs  data.rs  filter.rs  iter.rs  mod.rs  state.rs
crates/guest/src/system/: builder.rs  commands.rs  mod.rs  observer.rs  param.rs  state.rs
crates/guest/src/world/: deferred.rs  entity.rs  mod.rs
crates/guest_sys/: Cargo.toml
crates/guest_sys/src/: lib.rs
crates/guest_sys/src/query/: builder.rs  iter.rs  mod.rs  state.rs
crates/guest_sys/src/system/: mod.rs  observer.rs  param.rs  state.rs
crates/guest_sys/src/world/: deferred.rs  entity.rs  mod.rs
crates/host/: Cargo.toml
crates/host/src/: lib.rs  plugin.rs
crates/host/src/query/: builder.rs  iter.rs  mod.rs  state.rs
crates/host/src/system/: mod.rs  param.rs
crates/host/src/world/: entity.rs  mod.rs
crates/host_sys/: Cargo.toml
crates/host_sys/src/: lib.rs
crates/host_sys/src/query/: builder.rs  iter.rs  mod.rs  state.rs
crates/host_sys/src/system/: mod.rs  observer.rs  param.rs
crates/host_sys/src/world/: deferred.rs  entity.rs  mod.rs
crates/macros/: Cargo.toml
crates/macros/src/: lib.rs
example/core/: Cargo.toml
example/core/src/: lib.rs
example/guest/: Cargo.toml  build.rs
example/guest/src/: lib.rs
example/host/: Cargo.toml
example/host/src/: main.rs
src/: lib.rs
tests/core/: Cargo.toml
tests/core/src/: lib.rs
tests/guest/: Cargo.toml  build.rs
tests/guest/src/: lib.rs
tests/host/: Cargo.toml
tests/host/.cargo/: config.toml
tests/host/tests/: main.rs
