[package]
name = "bevy_mod_ffi"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[workspace]
members = [
  ".",
  "crates/guest",
  "crates/host",
  "crates/macros",
  "example/core",
  "example/guest",
  "example/host",
]

[features]
guest = ["bevy_mod_ffi_guest"]
macros = ["bevy_mod_ffi_macros"]
host = ["bevy_mod_ffi_host"]

[dependencies]
bevy_mod_ffi_guest = { path = "crates/guest", optional = true }
bevy_mod_ffi_host = { path = "crates/host", optional = true }
bevy_mod_ffi_macros = { path = "crates/macros", optional = true }
