[package]
name = "bevy_mod_ffi"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "FFI utilities for Bevy"

[workspace]
members = [
  ".",
  "crates/core",
  "crates/guest",
  "crates/guest_sys",
  "crates/host",
  "crates/host_sys",
  "crates/macros",
  "example/core",
  "example/guest",
  "example/host",
]

[features]
guest = ["bevy_mod_ffi_guest"]
macros = ["bevy_mod_ffi_macros"]
host = ["bevy_mod_ffi_host"]

[dependencies]
bevy_mod_ffi_core = { path = "crates/core", version = "0.1.0" }
bevy_mod_ffi_guest = { path = "crates/guest", version = "0.1.0", optional = true }
bevy_mod_ffi_host = { path = "crates/host", version = "0.1.0", optional = true }
bevy_mod_ffi_macros = { path = "crates/macros", version = "0.1.0", optional = true }
