[package]
name = "bevy_mod_ffi_core"
version = "0.2.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Core FFI types and utilities for bevy_mod_ffi"
documentation = "https://docs.rs/bevy_mod_ffi_core"
homepage = "https://github.com/matthunz/bevy_mod_ffi"
repository = "https://github.com/matthunz/bevy_mod_ffi"

[dependencies]
