[package]
name = "bevy_mod_ffi_host"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
bevy_mod_ffi_core = { path = "../core" }
bevy_mod_ffi_host_sys = { path = "../host_sys" }
bevy = { version = "0.17.3", default-features = false }
bytemuck = { version = "1.21", features = ["derive"] }
libloading = "0.8"
