[package]
name = "bevy_mod_ffi_host"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "FFI utilities for Bevy hosts"

[lib]
crate-type = ["rlib", "cdylib"]

[features]
default = []
hot_reload = ["bevy/file_watcher", "bevy/asset_processor"]

[dependencies]
bevy_mod_ffi_core = { path = "../core", version = "0.1.0" }
bevy_mod_ffi_host_sys = { path = "../host_sys", version = "0.1.0" }
bevy = { version = "0.17.3", default-features = false, features = ["bevy_asset"] }
bytemuck = { version = "1.21", features = ["derive"] }
libloading = "0.8"
thiserror = "2"
