[package]
name = "bevy_mod_ffi_macros"
version = "0.2.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Macros for bevy_mod_ffi"
documentation = "https://docs.rs/bevy_mod_ffi_macros"
homepage = "https://github.com/matthunz/bevy_mod_ffi"
repository = "https://github.com/matthunz/bevy_mod_ffi"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.104"
quote = "1.0.42"
syn = { version = "2.0.111", features = ["full", "extra-traits"] }
