[package]
name = "bevy_mod_ffi_example_core"
version = "0.2.0"
edition = "2024"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
bevy_mod_ffi = { path = "../..", features = ["guest", "macros"] }
bytemuck = { version = "1.21", features = ["derive"] }
bevy_ecs = "0.17.3"
bevy_reflect = "0.17.3"
