[package]
name = "bevy_mod_ffi_example_guest"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
bevy_mod_ffi = { path = "../..", features = ["guest", "macros"] }
bevy_mod_ffi_example_core = { path = "../core" }
bytemuck = { version = "1.21", features = ["derive"] }
