[package]
name = "bevy_mod_ffi_example_host"
version = "0.2.0"
edition = "2024"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
bevy = { version = "0.17.3", default-features = false }
bevy_mod_ffi = { path = "../..", features = ["host"] }
bevy_mod_ffi_example_core = { path = "../core" }
libloading = "0.8"
